fix: grid flex itemStretch grow

--- a/grid/flex.scss
+++ b/grid/flex.scss
@@ -66,6 +66,7 @@
 
 .itemStretch {
   align-self: stretch;
+  flex-grow: 1;
 }
 
 .spaced {
